Removed bullets from team-member widget, and fixed text overflow.

--- a/makahiki/static/less/news.less
+++ b/makahiki/static/less/news.less
@@ -7,6 +7,10 @@
 	margin-left: 5px;
 }
 
+ul {
+  list-style: none;
+}
+
 #news-most-popular-actions p {
   text-align: center;
 }
